--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Enable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Enable.cshtml
@@ -5,6 +5,7 @@
     ViewBag.PrimerNivel = "bitacoras_produccion";
     ViewBag.SegundoNivel = "produccion_registros";
     ViewBag.ControllerName = "ProduccionRegistros";
+    ViewBag.nav_style = "nav-sm";
 
     Portal_2_0.Models.mm_v3 mm = (Portal_2_0.Models.mm_v3)ViewBag.MM;
     Portal_2_0.Models.class_v3 class_ = (Portal_2_0.Models.class_v3)ViewBag.Class;
