2025-11-06 Se comienza con la carga on demand de mm.

--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Create.cshtml
@@ -5,6 +5,7 @@
     ViewBag.PrimerNivel = "bitacoras_produccion";
     ViewBag.SegundoNivel = "produccion_registros";
     ViewBag.ControllerName = "ProduccionRegistros";
+    ViewBag.nav_style = "nav-sm";
 
     //planta
     Portal_2_0.Models.plantas plantaVB = (Portal_2_0.Models.plantas)ViewBag.Planta;
